Funcional login y form configuracion

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "92e522f1-dd8c-4f70-9302-1960ef87c457"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
